<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium"
    tools:context=".TareaActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_small"
        app:cardBackgroundColor="@android:color/holo_blue_dark"
        app:cardCornerRadius="@dimen/margin_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/detalles" />

            <EditText
                android:id="@+id/textoDetalles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingrese_la_tarea"
                android:inputType="textPersonName" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_small">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView51"
                        android:layout_width="@dimen/texto_mediano"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/estatus" />

                    <TextView
                        android:id="@+id/textoEstatus"
                        android:layout_width="@dimen/texto_mediano"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView52"
                        android:layout_width="@dimen/texto_mediano"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fecha_creado" />

                    <TextView
                        android:id="@+id/textoFechaCreado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView53"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fecha_tope" />

                    <TextView
                        android:id="@+id/textoFechaTope"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="" />

                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_big"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/botonEliminar2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    app:srcCompat="@drawable/ic_delete" />

                <ImageView
                    android:id="@+id/botonTerminar2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_big"
                    android:layout_marginRight="@dimen/margin_big"
                    app:srcCompat="@drawable/ic_complete" />

                <ImageView
                    android:id="@+id/botonGuardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    app:srcCompat="@drawable/ic_save" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>



</LinearLayout>